# sanic-currency-exchange-rates-api

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_origin.md  REDIS_STACK.md  constants.py  main.py  marketplace.json  pyproject.toml  requirements.txt  service.py
.github/workflows/: codeql-analysis.yml  docker-publish.yml
docs/: Redis-Stack.md  redis.md
infra/: start.sh
src/: constants.py  decorators.py  handlers.py  main.py  pyproject.toml  requirements.txt  service.py  utils.py
src/db/: day_rates.py  db_interface.py  gino_db.py  redis_om_repo.py  redis_stack.py
src/infra/: start.sh
templates/: index.html
tests/: load-test.js  sanic currency exchange api.postman_collection.json
